--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.1",
-    "@react-navigation/native": "^7.1.27",
+    "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.0",
     "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.13.2",
     "expo": "~54.0.31",
-    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -25,6 +23,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0"
   },
