Fix tsconfig.json formatting and structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
-}
-{
-  "compilerOptions": {
+    "strict": true,
     "moduleSuffixes": [".native", ".web", ""]
   }
 }
